tests/kiama/positive/L1/emptydeclsections.ob
MODULE emptydeclsections;

CONST

TYPE

VAR

END emptydeclsections.
