tests/kiama/negative/name_errors/L1/5_var1.ob
MODULE varname;

VAR
    avar1 : INTEGER;
    avar2 : avar1;

END varname.
